--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -170,8 +170,7 @@
     width: 100%;
     height: 128px;
     margin-bottom: 30px;
-    padding-left: 20px;
-    padding-top: 12px;
+    padding: 12px 20px;
     font-size: 16px;
     line-height: 24px;
     font-family: $Roboto;
