--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ html {
   color: $LightestSlate;
 }
 
-h1, h2, h3, h4, body, ul, li{
+h1, h2, h3, h4, body, ul, li, p {
   margin: 0;
   padding: 0;
 }
