--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -40,6 +40,12 @@
     }
   }
 
+  &__text {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
   &__foto {
     width: 300px;
     height: 300px;
